# Employee-Management-System-Based-on-Polymorphism

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
include/: common.h
src/: CMakeLists.txt  main.cpp
src/boss/: CMakeLists.txt  boss.cpp  boss.h
src/employee/: CMakeLists.txt  employee.cpp  employee.h
src/manager/: CMakeLists.txt  manager.cpp  manager.h
src/worker/: CMakeLists.txt  worker.h
src/workermanager/: CMakeLists.txt  wokermanager.h  workmanager.cpp
